# containers

./: .dockerfilelintrc  .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  COMPILED_DOCS.md  LICENSE.md  README.md  TEMPLATE_SYSTEM_README.md  ai_config.example.yaml  ai_config.yaml  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  renovate.json5  settings.yml
.github/actions/setup/: action.yaml
.github/workflows/: AGENTS.md  build-publish.yaml  cache-cleanup.yaml  container-scan.yaml  dockerfile_generation.yaml  fro-bot.yaml  lint.yaml  main.yaml  metrics_collector.yaml  publish_docs.yaml  release.yaml  renovate.yaml  test.yaml  update-repo-settings.yaml
archived/: README.md
archived/parity/branch/: Dockerfile
archived/parity/release/: Dockerfile
dfscripts/: collect_docker_metrics.py  generate_dockerfile.py
docs/: AI_CLI_GUIDE.md  AI_CONFIGURATION.md  AI_VERIFICATION_REPORT.md  CI_BUILD_FIXES.md  MULTI_ARCH.md
docs/templates/: API.md  README.md
docs/templates/app/: README.md
docs/templates/apps/nodejs/express/: EXAMPLES.md  PARAMETERS.md  README.md  TROUBLESHOOTING.md
docs/templates/apps/python/fastapi/: EXAMPLES.md  PARAMETERS.md  README.md  TROUBLESHOOTING.md
docs/templates/base/: README.md
docs/templates/base/alpine/: EXAMPLES.md  PARAMETERS.md  README.md  TROUBLESHOOTING.md
docs/templates/database/: README.md
docs/templates/databases/postgresql/: EXAMPLES.md  PARAMETERS.md  README.md  TROUBLESHOOTING.md
docs/templates/databases/redis/: EXAMPLES.md  PARAMETERS.md  README.md  TROUBLESHOOTING.md
docs/templates/infrastructure/: README.md
docs/templates/infrastructure/nginx/: EXAMPLES.md  PARAMETERS.md  README.md  TROUBLESHOOTING.md
docs/templates/microservice/: README.md
docs/templates/microservices/go/: EXAMPLES.md  PARAMETERS.md  README.md  TROUBLESHOOTING.md
node/: README.md
node/alpine/: Dockerfile  index.js  package-lock.json  package.json
node/release/: Dockerfile  docker-entrypoint.sh  index.js  package-lock.json  package.json
parity/branch/: Dockerfile
parity/release/: Dockerfile
repo/dfscripts/: generate_documentation.py
repo/examples/: docker-compose.yaml
repo/image1/: README.md
repo/image2/: README.md  entrypoint.sh
scripts/: AGENTS.md  ai_chat_interface.py  ai_core.py  build_multiarch.py  collect_docker_metrics.py  containers_cli.py  containers_simple.py  documentation_ai.py  generate_dockerfile.py  generate_image_tags.py  predictive_maintenance.py  template_documentation.py  template_engine.py  template_intelligence.py  template_testing.py
templates/: AGENTS.md
templates/apps/nodejs/express/: .dockerignore  Dockerfile  nodemon.json  package.json  template.yaml  tsconfig.json
templates/apps/nodejs/express/src/: app.ts
templates/apps/nodejs/express/src/middleware/: error.ts
templates/apps/nodejs/express/src/routes/: health.ts
templates/apps/python/fastapi/: Dockerfile  app.py  config.py  docker-compose.yml  entrypoint.sh  healthcheck.py  requirements.txt  template.yaml
templates/base/alpine/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  template.yaml
templates/databases/postgresql/: Dockerfile  healthcheck.sh  init.sql  pg_hba.conf  postgresql.conf  template.yaml
templates/databases/redis/: template.yaml
templates/infrastructure/nginx/: template.yaml
templates/microservices/go/: Dockerfile  go.mod  template.yaml
tests/: conftest.py  test_ai_config_cli.py  test_ai_core.py  test_containers_cli.py  test_dockerfile_policy.py  test_predictive_maintenance.py  test_template_engine.py
