[project]
name = "containers"
version = "0.1.0"
description = "A repository containing various Dockerfiles."
authors = [{ name = "Marcus R. Brown", email = "<git@mrbro.dev>" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
  "argparse (>=1.4.0,<2.0.0)",
  "pyyaml (>=6.0.2,<7.0.0)",
  "requests (>=2.32.4,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
profile = "black"
known_third_party = ["pytest"]

[tool.poetry]
packages = [{ include = "scripts" }]

[tool.poetry.scripts]
collect-docker-metrics = "scripts.collect_docker_metrics:main"
generate-image-tags = "scripts.generate_image_tags:main"
generate-dockerfile = "scripts.generate_dockerfile:main"
