[project]
name = "containers"
version = "0.1.0"
description = "A repository containing various Dockerfiles."
authors = [{ name = "Marcus R. Brown", email = "<git@mrbro.dev>" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "pyyaml (>=6.0.2,<7.0.0)",
  "requests (>=2.33.0,<3.0.0)",
  "jinja2 (>=3.0.0,<4.0.0)",
  "jsonschema (>=4.0.0,<5.0.0)",
  "openai (>=2.47.0,<2.48.0)",
  "anthropic (>=0.30.0,<1.0.0)",
  "urllib3 (>=2.7.0)",
]

[project.scripts]
containers = "scripts.containers_cli:main"
collect-docker-metrics = "scripts.collect_docker_metrics:main"
generate-image-tags = "scripts.generate_image_tags:main"
generate-dockerfile = "scripts.generate_dockerfile:main"
template-engine = "scripts.template_engine:main"
template-testing = "scripts.template_testing:main"
generate-docs = "scripts.template_documentation:main"
ai-chat = "scripts.ai_chat_interface:main"
ai-analyze = "scripts.template_intelligence:analyze_project"
ai-recommend = "scripts.template_intelligence:recommend_templates"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']
extend-exclude = '''
(
  ^/templates/
)
'''

[tool.isort]
profile = "black"
known_third_party = ["pytest"]
extend_skip = ["templates"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov --cov-report=term-missing --cov-fail-under=35"

[tool.coverage.run]
branch = true
source = [
  "scripts.ai_core",
  "scripts.template_engine",
  "scripts.containers_cli",
  "scripts.predictive_maintenance",
]

[tool.coverage.report]
skip_covered = false
show_missing = true

[tool.poetry]
packages = [{ include = "scripts" }]

[tool.poetry.group.dev.dependencies]
pytest = "9.1.1"
pytest-cov = "7.1.0"
pytest-mock = "3.15.1"
black = "==26.5.1"
isort = "8.0.1"
pylint = "4.0.6"
yamllint = "1.38.0"
